src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__type_initializers__unresolvable_types_validation.snap
---
source: src/codegen/tests/initialization_test/type_initializers.rs
expression: msg
---
error[E071]: struct member lvalue required as left operand of assignment
  ┌─ <internal>:3:38
  │
3 │             a : MyStruct2  := (a := (c:=5, b:= 7), b := (a:=3, b:=2));
  │                                      ^ struct member lvalue required as left operand of assignment
